# Huegen

./: .clang-format  .clang-format.back  CMakeLists.txt  README.md  TODO.md  algo2.cpp  algo3.cpp  algo4.cpp  extract_vibrant.cpp  heugen  heugenTest  huegen  install.sh  main.cpp  medianCut.cpp  out.css  out.csscd  viberent.cpp  wallpaper_huegen.sh
Doc/: Rough.md
extension/src/: background.js  content.js  manifest.json  pallet_firefox.json
extension/src/native-messaging-hosts/: huegen_firefox.json
extension/src/test/: native_host.cpp
include/: color_selector.hpp  color_utils.hpp  hooks.hpp  kmeans_wrapper.hpp  logger.hpp  template_engine.hpp
output/: sequence  waybar.css
src/: color_selector.cpp  color_utils.cpp  hooks.cpp  kmeans_wrapper.cpp  logger.cpp  main.cpp  template_engine.cpp
templates/: .Xresources.tlp  colors-speedcrunch.json.tlp  colors.tlp  hyprColor.conf.tlp  putty.reg.tlp  rofi-dark.rasi.tlp  scss.tlp  sequence.tlp  sway.tlp  termcol.sh.tlp  waybar.css.tlp
themes/: colors  colors-speedcrunch.json  colors.css  foot-color.ini  hyprColor.conf  out.css  rofi-colors.rasi  scss  termcol.sh  waybar.css
